foi feito o primeiro grafico da tarefa

--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -98,11 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Espaçamento entre os dados: 0.0320570678937734\n"
+     ]
+    }
+   ],
    "source": [
     "# inicio e fim são os intervalos de integração\n",
     "inicio = 0\n",
@@ -129,12 +137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x72b84e0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAEPCAYAAABGP2P1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGqRJREFUeJzt3X2QHPV95/H3JxKR4OoUbCtnUQJKyZr4TAyq4EMWftL4\ncLzCkwtJnLJLNviITczZJ1Z3qUuMc1VoOVfOdnC5YGUHKzyo7KICVbZJGVgsRGwPUI6QoRCW9USk\nxVTpwZKMDrAci40E3/tjeqXZ3Znd3tnpme6Zz6tKpemZn1q/7dqd73Z/5vtrRQRmZmZjfq3TEzAz\ns3xxYTAzs3FcGMzMbBwXBjMzG8eFwczMxnFhMDOzcTItDJLuknRY0k+mGFOStFXSdkmVLOdjZmbT\nU5Z9DJLeDfwS+EZEXFTn9bOBHwL9EbFf0sKIeCGzCZmZ2bQyPWOIiMeBF6cY8hHg2xGxPxnvomBm\n1mGdzhguAF4v6QeSnpJ0dYfnY2bW8+Z2+P8/A7gEuBw4C9gs6YmI2NPZaZmZ9a5OF4Z9wAsRcRw4\nLukxYCkwrjBI8oJOZmZNiAjN9N90+lLSd4B3SZoj6Szg7cDOegPf//738+CDDxIRPf1n7dq1HZ9D\nXv74WPhY+FhM/adZmZ4xSLoHWAEslLQPWEv18hERsT4idkvaCGwDXgNuj4i6hWHTpk2MjIwAUC6X\ns5y2mVlPy7QwRMSqFGO+BHwpzf5GRkZYt26dC4OZWYY6fSlpxl555ZVOT6GjSqVSp6eQGz4Wp/lY\nnOZjMXuZNri1Sm343N/fz8aNGyeNGR4eZmhoiNHRUebNm8fAwIDPLMysp0kimgifO/2ppBnp6+vj\n+uuvn/T88PAwa9asOZVBAM4jzMyaVJgzhv7+fq6//vq6b/T9/f1s2rSp7vP1zi7MzHpB158xTPUG\nPzo6Wvf5Xs8jzMyaUbjwuZ558+bVfX7+/PltnomZWfF1RWEYGBigr69v3HNT5RH9/f2USiX6+/sZ\nHh5u1zTNzAqhMJeSpjKWO6xbt45XXnmF+fPn180jHFKbmU2vMOFzK+bpkNrMekmz4XNXXEpKyyG1\nmdn0eqowzDSkdh5hZr2oKzKGtAYGBhgZGRmXMbhpzsxsvJ7KGKD6hj9dSA3OI8ys+Lq+wa1VyuVy\nqt/4nUeYWa/qqYxhJtw0Z2a9yoWhgZk0zYGDajPrHj13KSmttE1z4KDazLpLz4XPWXBQbWZ55Aa3\nDnJQbWbdJNPCIOkuSYcl/WSacZdKOinpT7KcT1ZmElQ7izCzvMs6Y9gArAO+0WiApDnAF4GNwIxP\nefIgbeOcswgzK4LMMwZJS4AHIuKiBq//D+DfgEuBByPi23XG5DpjgHSNc84izKydCtngJmkxcCXw\nn6kWhny/+08hTeOcswgzK4JOh8+3ADckpwOioJeS0nLTnJkVQaf7GN4G3CsJYCFwhaQTEXH/xIGD\ng4OnHpdKJUqlUpum2DozWcQPqpenhoaGGB0dZd68eQwMDDiLMLOGKpUKlUpl1vvpeMZQM25DMu6+\nOq/lPmNIK+0ifvWC6r6+Pm699VYXBzNLpdmMIdPCIOkeYAXVs4HDwFrgDICIWD9hbE8UhrQcVJvZ\nbOUyfI6IVTMY+2dZzqVoHFSbWad0Ony2Btw0Z2ad0unw2Rpw05yZdYoX0csxN82Z2WzkMmOw2XHT\nnJl1gjOGgptp05zzCDObjs8YCm4mTXPOI8wsDWcMXSBt05zzCLPe4oyhh6XJIsB5hJml44yhh3gR\nPzNLw4WhhwwMDNDX1zfuuanyCIfUZr3Jl5J6yNjlpunyCIfUZr3N4bNN4pDarDs0Gz77UpJN4pDa\nrLe5MNgkXsDPrLc5Y7BJvICfWW9zxmB1eQE/s+Jzg5u1lBfwM+tdzhisaW6YM+tOLgzWtJk0zIGD\narOiyPRSkqS7gDJwJCIuqvP6R4G/AgQcAz4VEduynJO1TtqGOXBQbVYkmYbPkt4N/BL4RoPCcBmw\nMyJelrQSGIyI5XXGOXwuOAfVZu2Xywa3iHgceHGK1zdHxMvJ5hbg3CznY53joNqsOPKUMXwCeKjT\nk7BsuGnOrDhy8XFVSe8FPg68s9GYwcHBU49LpRKlUinzeVnruGnOLHuVSoVKpTLr/WTe4CZpCfBA\nvYwhef1i4D5gZUTsbTDGGUMXcNOcWXsVssFN0vlUi8JVjYqCdQ83zZkVQ9YfV70HWAEslLQPWAuc\nARAR64EbgdcBt0kCOBERy7Kck+Wbm+bMOi/TwhARq6Z5/Vrg2iznYMUykyxiaGiI0dFR5s2bx8DA\ngDMIsxbJRfhsNiZN05wDarNseXVVKxwH1Gbp5LLBzSwLDqjNsuXCYIXjZjmzbDljsMJxs5xZtpwx\nWCG5Wc5seoVscDNrlpvlzLLjjMG6lpvlzJrjwmBdayZ3mHNIbXaaLyVZ10p7hzmH1GbjOXy2nueQ\n2rqVG9zMmuSQ2mw8FwbreWlDaucQ1iucMVjPS9Mw5xzCeokzBjOmb5hzDmFF5AY3s1mYrmHOOYT1\nEmcMZim4Wc56iQuDWQpulrNe4ktJZim4Wc56Sabhs6S7gDJwJCIuajBmCLgC+BVwTURsrTPG4bMV\ngkNqy5O8NrhtAFY2elHSB4A3RcQFwCeB2zKej1mmHFJbN8i0METE48CLUwz5Q+DrydgtwNmS3pjl\nnMyy5GY56wadzhgWA/tqtvcD5wKHOzMds9lxs5x1g04XBoCJ17/qhgmDg4OnHpdKJUqlUnYzMmtS\nmpB6aGhoXFGAamFYt26dC4PNSqVSoVKpzHo/mXc+S1oCPFAvfJb0NaASEfcm27uBFRFxeMI4h8/W\nNUqlEo8++uik51esWNGSH2qzMXkNn6dzP/AxAEnLgZcmFgWzbuNmOcu7TAuDpHuAfwbeLGmfpI9L\nuk7SdQAR8RDwnKS9wHrg01nOxywP0jTLOZy2Tso0Y4iIVSnGrM5yDmZ5M10O4XDaOs2rq5rljJvk\nrFWKmjGY2QRukrNOc2Ewyxk3yVmn5aGPwcxquEnOOs0Zg1kO+Y5y1gq+g5tZF/Ed5ayTnDGYFZCb\n5CxLLgxmBZT2jnIOqK0ZvpRkVkBpFutzQG3Ncvhs1qUcUFtmDW6Sbpa0QNIZkr4n6QVJVzc3TTNr\nFwfU1qw0GcP7I+IXwB8AzwN9wF9mOSkzm700AbUzCKsnTcYwNuYPgG9FxMuSfF3HLOema5RzBmGN\nTJsxSPoC8EfAK8Ay4GyqN955e/bTOzUHZwxmTZiqUc4ZRPfLrMEtIm6Q9LfAyxHxqqR/pVoozCzn\npmqUcwZhjUxbGCT9OnA18B5JABXga9lOy8yy5iY5ayRN+HwbcAnwVeDvgLclz5lZgflOctZImvD5\n0oi4uGb7e5K2ZTUhM2sP30nOGkkTPj8NfCgi9ibbfcA3I+KSNsxvbA4On83azOF08WV5B7e/BL4v\n6VFJjwLfB/5XykmtlLRb0h5Jn6nz+kJJGyU9I2m7pGtmNHszy4zD6d6V5lNJ35P0O8CbgQCejYj6\n3zE1JM0BvgK8DzgAPCnp/ojYVTNsNbA1Ij4raSHwrKS7I+JkM1+MmbVO2ga5oaEhRkdHmTdvHgMD\nA77M1AUaFgZJH6RaCJT8PeZNyenJfdPsexmwNyKeT/Z3L3AlUFsYfgaM5RcLgKMuCmb54Aa53jXV\nGcN/oVoQ/gPwDqqXkADeC/wzMF1hWAzsq9neD0xsirud6mWqg8C/Bz6UbtpmlrXpwumhoaFxRQGq\nhWHdunUuDAXXsDBExDUAkh4BLoyInyXb5wBfT7HvNGnxXwPPREQpCbUfkbQ0Io5NHDg4OHjqcalU\nolQqpdi9mc2GG+SKpVKpUKlUZr2fNB9XPQ84VLN9GDg/xb87kPzb2v3snzDmHcDfAETEiKSfUs0y\nnpq4s9rCYGadN10G4fyh/Sb+0nzTTTc1tZ80heGfgIcl/QPVvOHDwCMp/t1TwAWSlgAHk3+3asKY\n3VTD6R9KeiPVovBcqpmbWUdNlUE4fyi2NH0MAv4YeA/Vy0OPRcQ/ptq5dAVwCzAHuDMiPi/pOoCI\nWJ98EmkD1TOQXwM+HxH/UGc/7mMwy6FGi/S5ByIfmu1j8B3czKzlSqUSjz766KTnV6xY0ZJr4JZO\nlndwu0zSk5J+KemEpNck/aK5aZpZL/ACfcWWpvP5K8BHgD3AfOATVBfTMzOrywv0FVua8JmI2CNp\nTkS8CmyQ9AxwQ7ZTM7Oi8gJ9xZYmfH4M+H3gDqqdyoeA/xoRS7Of3qk5OGMw6yIOp9sjy0X0PpaM\nWw38CjgX+OBM/yMzszFujsu3NIvoPS/pN5PHg5nPyMy6npvj8m2qRfQErKV6pjAnee5VYB3wf3xt\nx8ya5ea4fGuYMUj6C+AK4JMR8dPkud+mer/njRHx5bZN0hmDWddxc1z2ms0YprqU9DHg9yPi52NP\nRMRzkj5KdUmMthUGM+s+jRboc/7QeVOFz3Nri8KY5LlUH3M1M5spN8d13lSF4USTr5mZNW265jg3\nxmVvqt/8L5Y06b4IiTOzmIyZ2VTNcQ6m28OL6JlZYTiYnpksG9zMzHLBwXR7uDCYWWFMFUw7e2gd\nf7rIzAqjUWPc8uXLnT20kDMGMyuUeo1xQ0NDzh7q8B3czKxn+Y5x9Tl8NrOe5aa41sq0MEhaKWm3\npD2SPtNgTEnSVknbJVWynI+ZdSc3xbVWZuGzpDlUbwv6PuAA8KSk+yNiV82Ys4GvAv0RsV/Swqzm\nY2bdy01xrZVZxiDpMmBtRKxMtm8AiIgv1Iz5NLAoIm6cZl/OGMysKb3cFJfHjGExsK9me3/yXK0L\ngNdL+oGkpyRdneF8zKwHuSlu5rLsY0jzK/4ZwCXA5cBZwGZJT0TEnokDBwcHTz0ulUqUSqXWzNLM\nutp0TXHddKe4SqXSkk9hZVkYDgDn1WyfR/WsodY+4IWIOA4cl/QYsBSYsjCYmaXVS01xE39pvumm\nm5raT5YZw1zgWapnAweBHwGrJoTP/5FqQN0PzAO2AB+OiJ0T9uWMwcya1qtNcVncwW1WIuKkpNXA\nw1TvGX1nROySdF3y+vqI2C1pI7ANeA24fWJRMDObrXp3i7v55pvrjnX2kPFaSRHxXeC7E55bP2H7\nS8CXspyHmdlEboprzJ3PZtaTGjXFLV++vOeb4by6qpn1pHpNccuXL+fuu+/uqkC6GV5Ez8ws0W3N\ncHlscDMzKxQ3w1W5MJiZJXyHuCpnDGZmiV5qhpuKMwYzsxrd1AznO7iZmWWkqHeIc/hsZpaRXmuG\nc2EwM5tGrzXDOXw2M5tGrzXDOWMwM2tCEZrhnDGYmbVRNzfD+VKSmVkTGgXSx44do7+/v9B3hXNh\nMDNrQr1muEWLFnHw4EGefvrpU88VMXdwxmBm1qSJzXBHjhxh69atk8Z1KnfI3R3czMy63cQ7w9Xe\nb7lW0XIHh89mZi3SLY1wLgxmZi1SrxFu0aJFHDlypFBNcJleSpK0ErgFmAPcERFfbDDuUmAz8KGI\nuC/LOZmZZWViI9yxY8c4ePDguNyhCGF0ZuGzpDnAs8D7gAPAk8CqiNhVZ9wjwK+ADRHx7Tr7cvhs\nZoXT6Sa4PDa4LQP2RsTzEXECuBe4ss6464FvAT/PcC5mZm1X1Ca4LAvDYmBfzfb+5LlTJC2mWixu\nS57yaYGZdY1GYfT27dtznTlkmTGkeZO/BbghIkKSgIanPIODg6cel0qlhh8LMzPLi3pNcHPnzuXo\n0aOn7u/QysyhUqm05P4QWWYMy4HBiFiZbH8WeK02gJb0HKeLwUKqOcOfR8T9E/bljMHMCqm2CW77\n9u0cPXp00pisMofc3cFN0lyq4fPlwEHgR9QJn2vGbwAeqPepJBcGM+sG7b4TXO46nyPipKTVwMNU\nP656Z0TsknRd8vr6rP5vM7M8KkoDnNdKMjNrk+HhYdasWTNp4b1zzjmHBQsWtHw11tydMZiZ2XhF\naYDzGYOZWYdk3QCXxwY3MzObQl4b4FwYzMw6JK8NcM4YzMw6pN0NcGk5YzAz66AsG+By1+DWSi4M\nZtYLWt0A5/DZzKzg8tIA58JgZpYT9e4Ad+aZZ7J///62BtEOn83McqK2Ae7AgQOMjIxw/PhxduzY\nwY4dO9oWRDtjMDPLoVY0vzljMDPrIp1sfnNhMDPLoUZB9LZt2zLPG5wxmJnlUL3mN4AXX3yRTZs2\nZZo3OGMwM8upsea3LVu28NJLL016fbq8wRmDmVmXKZfLbNy4kaVLl9Z9Pau8wYXBzCznplpsL4us\nwYXBzCzn6jW+ARw9epQ1a9a0vDhkXhgkrZS0W9IeSZ+p8/pHJf1Y0jZJP5R0cdZzMjMrknK5zK23\n3sob3vCGSa+NjIywbt26lv5/mRYGSXOArwArgQuBVZLeMmHYc8B7IuJi4HPA32c5JzOzIiqXy7z1\nrW+t+1qrs4aszxiWAXsj4vmIOAHcC1xZOyAiNkfEy8nmFuDcjOdkZlZI7VpkL+vCsBjYV7O9P3mu\nkU8AD2U6IzOzgmrXIntZN7ilbj6Q9F7g48A7s5uOmVlxtWuRvawLwwHgvJrt86ieNYyTBM63Aysj\n4sV6OxocHDz1uFQqUSqVWjlPM7NCKJfLlMtl+vv72b59+7jXRkZGWLNmDU8++eSs/o9MO58lzQWe\nBS4HDgI/AlZFxK6aMecD3weuiognGuzHnc9mZjXS3O2t2c7nTM8YIuKkpNXAw8Ac4M6I2CXpuuT1\n9cCNwOuA2yQBnIiIZVnOy8ys6BoF0ceOHZv1vr1WkplZAQ0PD3Pttddy6NChcc8vWrSIO+64g3K5\n7LWSzMx6Sblc5pxzzpn0/KFDh2bd8ObCYGZWUAsWLKj7/Gwb3lwYzMwKKquGNxcGM7OCqtfwNn/+\nfI4cOTKrZjeHz2ZmBTY8PMyNN97Izp07x11C6uvrY2RkxOGzmVmvKZfLLFy4cFKuMPGWoDPhwmBm\nVnCjo6Mt3Z8Lg5lZwTUKoZvlwmBmVnADAwMsWrSoZftzYTAzK7hGzW7NcmEwM+sCjZrdmuHCYGbW\nBVqZM7gwmJl1gXrNbs1yYTAz6wLlcpmrrrqKM888c9b7cmEwM+sSmzdv5vjx47PejwuDmVmXaFWj\nmwuDmVmXaFUA7cJgZtYlWtXo5sJgZtYlWtXolmlhkLRS0m5JeyR9psGYoeT1H0v6vSznY2bW7VrR\n6JZZYZA0B/gKsBK4EFgl6S0TxnwAeFNEXAB8Ergtq/l0i0ql0ukp5IaPxWk+Fqf1+rFoRc6Q5RnD\nMmBvRDwfESeAe4ErJ4z5Q+DrABGxBThb0hsznFPh9fo3fS0fi9N8LE7r9WPRipwhy8KwGNhXs70/\neW66MedmOCczM5tGloUh7b04J952zvfwNDNr0tDQEIcOHZrVPjK757Ok5cBgRKxMtj8LvBYRX6wZ\n8zWgEhH3Jtu7gRURcXjCvlwszMya0Mw9n+dmMZHEU8AFkpYAB4EPA6smjLkfWA3cmxSSlyYWBWju\nCzMzs+ZkVhgi4qSk1cDDwBzgzojYJem65PX1EfGQpA9I2gv8K/BnWc3HzMzSyexSkpmZFVOuOp/d\nEHfadMdC0keTY7BN0g8lXdyJebZDmu+LZNylkk5K+pN2zq9dUv58lCRtlbRdUqXNU2ybFD8fCyVt\nlPRMciyu6cA020LSXZIOS/rJFGNm9r4ZEbn4Q/Vy015gCXAG8AzwlgljPgA8lDx+O/BEp+fdwWNx\nGfAbyeOVvXwsasZ9H3gQ+GCn592h74mzgR3Aucn2wk7Pu4PHYhD4/NhxAI4Cczs994yOx7uB3wN+\n0uD1Gb9v5umMwQ1xp017LCJic0S8nGxuoXv7P9J8XwBcD3wL+Hk7J9dGaY7DR4BvR8R+gIh4oc1z\nbJc0x+JnwNjaEAuAoxFxso1zbJuIeBx4cYohM37fzFNhcEPcaWmORa1PAA9lOqPOmfZYSFpM9Y1h\nbEmVbgzO0nxPXAC8XtIPJD0l6eq2za690hyL24HflXQQ+DGwpk1zy6MZv29m+XHVmXJD3GmpvyZJ\n7wU+Drwzu+l0VJpjcQtwQ0SEJDH5e6QbpDkOZwCXAJcDZwGbJT0REXsynVn7pTkWfw08ExElSX3A\nI5KWRsSxjOeWVzN638xTYTgAnFezfR7VyjbVmHOT57pNmmNBEjjfDqyMiKlOJYsszbF4G9VeGKhe\nT75C0omIuL89U2yLNMdhH/BCRBwHjkt6DFgKdFthSHMs3gH8DUBEjEj6KfBmqv1VvWbG75t5upR0\nqiFO0q9TbYib+IN9P/AxONVZXbchrgtMeywknQ/cB1wVEXs7MMd2mfZYRMRvR8RvRcRvUc0ZPtVl\nRQHS/Xx8B3iXpDmSzqIaNO5s8zzbIc2x2A28DyC5nv5m4Lm2zjI/Zvy+mZszhnBD3ClpjgVwI/A6\n4LbkN+UTEbGsU3POSspj0fVS/nzslrQR2Aa8BtweEV1XGFJ+T/xfYIOkH1P9BfivIuL/dWzSGZJ0\nD7ACWChpH7CW6mXFpt833eBmZmbj5OlSkpmZ5YALg5mZjePCYGZm47gwmJnZOC4MZmY2jguDmZmN\nk5s+BrN2kvQG4J+SzUXAq1QX4AtgWbcuuGaWhvsYrOdJWgsci4gvd3ouZnngS0lmVZL0NkmVZGXS\njZIWJS9UJH1Z0pOSdiU3BPpHSf8i6XPJmCXJjWPulrRT0jclnZm8drmkp5ObKt2ZLOOApC9I2pHc\nPOXmzn3pZuO5MJhVCRgC/jQi/hOwgWQRNqqXl0Yj4lKqS3t/B/hvwFuBayS9Lhn3O8BXI+JC4BfA\npyXNT/b1oYi4mOrl209Jej3wRxHxuxGxFPhcW75KsxRcGMyq5lF9o39E0lbgfzN+jf+xRdq2A9sj\n4nBE/BvVhdnGVq7cFxGbk8d3A++iWix+WrPQ4deB9wAvA68kZxB/DBzP6OsymzGHz2ZVAnZExDsa\nvD6a/P1azeOx7bGfo9rATtRf814AEfGqpGVU753wp8Dq5LFZx/mMwaxqFPjNZFliJJ0h6cIZ7uP8\nsX9P9TabjwPPAkuSm8UAXA1UJP074OyI+C7wF1Tvm2CWCy4MZlWvUv3N/YuSngG2ApfVGRc0vvvV\ns8B/l7QT+A3gtogYpbrM8TclbQNOAl+jeh/iB5JloR8H/mcrvxiz2fDHVc1aQNIS4IGIuKjDUzGb\nNZ8xmLWOf8uyruAzBjMzG8dnDGZmNo4Lg5mZjePCYGZm47gwmJnZOC4MZmY2jguDmZmN8/8BHwH/\nNPot1SgAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x4bb5a20>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline \n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure()\n",
+    "plt.plot(dados, tempos, \"ok\")\n",
+    "plt.xlabel('Tempos')\n",
+    "plt.ylabel('Dados')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,11 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.01594289451325\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
