--- a/tarefa-integracao.ipynb
+++ b/tarefa-integracao.ipynb
@@ -306,12 +306,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999143605663631\n"
+     ]
+    }
+   ],
+   "source": [
+    "integral_t = 0\n",
+    "N = len(dados)\n",
+    "for i in range (0, N - 1, 1):\n",
+    "    integral_t = intervalo*(dados[i] + dados[i + 1])/2 + integral_t\n",
+    "print(integral_t)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,12 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.563943363693038e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "analitico = math.sin(math.pi/2)- math.sin(0)\n",
+    "erro_t = abs(analitico - integral_t)\n",
+    "print(erro_t)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,6 +367,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É menor. Porque as áreas antes consideradas, já não são mais contabilizadas e com isso o erro diminui. Sim pois esta era a intenção de se utilizar uma figura geométrica mais próxima à forma real."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -370,21 +404,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360, 370, 380, 390, 400, 410, 420, 430, 440, 450, 460, 470, 480, 490, 500, 510, 520, 530, 540, 550, 560, 570, 580, 590, 600, 610, 620, 630, 640, 650, 660, 670, 680, 690, 700, 710, 720, 730, 740, 750, 760, 770, 780, 790, 800, 810, 820, 830, 840, 850, 860, 870, 880, 890, 900, 910, 920, 930, 940, 950, 960, 970, 980, 990]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "for valor in range(10, 1000, 10):\n",
+    "    lista.append(valor)\n",
+    "print(lista)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0160285339468867\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = len(lista)\n",
+    "delta = (fim - inicio)/(N - 1)\n",
+    "print(delta)"
+   ]
   },
   {
    "cell_type": "markdown",
